--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,5 @@
     "files.trimTrailingWhitespace": true,
 	"editor.tabSize": 4,
     "editor.insertSpaces": false,
-    "editor.detectIndentation": true,
-    "editor.autoIndent": "none"
+    "editor.detectIndentation": true
 }
