--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "ng": "ng",
     "start": "babel-node server.js",
     "dev": "nodemon --exec babel-node server.js",
-    "build": "ng build",
-    "heroku-postinstall": "ng build --prod",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
