--- a/package.json
+++ b/package.json
@@ -43,13 +43,13 @@
     "mongodb": "^3.3.3",
     "mongoose": "^5.7.5",
     "ng-bootstrap-dropdown": "^1.0.0",
-    "ng2-dropdown": "0.0.21",
+    "ng2-dropdown": "^0.0.21",
     "ngx-web-storage": "^0.2.0",
     "ngx-webstorage": "^4.0.1",
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "webstorage": "0.0.7",
+    "webstorage": "^0.0.7",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -70,7 +70,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "nodemon": "2.0.3",
+    "nodemon": "^2.0.3",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
