--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
-	"window.zoomLevel": -1,
     "files.trimTrailingWhitespace": true,
-	"editor.tabSize": 4,
+	"editor.tabSize": 3,
     "editor.insertSpaces": false,
-    "editor.detectIndentation": true
+    "editor.detectIndentation": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "npm-intellisense.importES6": true,
+    "npm-intellisense.importQuotes": "'",
+    "npm-intellisense.importLinebreak": ";\r\n",
+    "npm-intellisense.importDeclarationType": "const"
 }
